--- a/bitrix/templates/main/news.html
+++ b/bitrix/templates/main/news.html
@@ -54,11 +54,17 @@
               <li> <a href="#">О квартале</a></li>
               <li> <a href="#">Цены и условия</a></li>
               <li> <a href="#">Фотогалерея</a></li>
+              <li> <a href="#">О квартале</a></li>
+              <li> <a href="#">Цены и условия</a></li>
+              <li> <a href="#">Фотогалерея</a></li>
+              <li> <a href="#">О квартале</a></li>
+              <li> <a href="#">Цены и условия</a></li>
+              <li> <a href="#">Фотогалерея</a></li>
             </ul>
           </div>
           <div>
             <p class="h3 js-drop">Сосновый квартал</p>
-            <ul class="links_quarter links_quarter-drop js-drop-content">
+            <ul class="links_quarter js-drop-content">
               <li> <a href="#">О квартале</a></li>
               <li> <a href="#">Цены и условия</a></li>
               <li> <a href="#">Фотогалерея</a></li>
