--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -11,9 +11,21 @@ footer.footer.footer__footer
 					a(href='#') Цены и условия
 				li 
 					a(href='#') Фотогалерея
+				li 
+					a(href='#') О квартале
+				li 
+					a(href='#') Цены и условия
+				li 
+					a(href='#') Фотогалерея
+				li 
+					a(href='#') О квартале
+				li 
+					a(href='#') Цены и условия
+				li 
+					a(href='#') Фотогалерея
 		div
 			p.h3.js-drop Сосновый квартал
-			ul.links_quarter.links_quarter-drop.js-drop-content
+			ul.links_quarter.js-drop-content
 				li 
 					a(href='#') О квартале
 				li 
