--- a/src/pug/news-one.pug
+++ b/src/pug/news-one.pug
@@ -6,17 +6,15 @@ block title
 block content
 	include includes/_sliders
 	include includes/_btn
-
 	include includes/_header
 	
 	div.wrapp-news-one-page
 		nav.title-breadcrumbs
 			ul.breadcrumbs
 				li 
-					a(href='#') Главная /
+					a(href='#') Главная 
 				li 
-					a(href='#') Новсти и акции /
-
+					a(href='#') Новсти и акции 
 		section.title-news_shares_one
 			div.wrapp_news_one.__margin-20
 				h3.news_one__title.margin__top-bottom От 17,5% на 20 лет: уникальный кредит на жилье в НБ
