--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -48,6 +48,7 @@ a {text-decoration: none;}
 	display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 100%;
 }
 .__margin-20 {
 	margin: 0 20px;
