--- a/bitrix/templates/main/news-one.html
+++ b/bitrix/templates/main/news-one.html
@@ -21,8 +21,8 @@
       <div class="wrapp-news-one-page">
         <nav class="title-breadcrumbs">
           <ul class="breadcrumbs">
-            <li> <a href="#">Главная /</a></li>
-            <li> <a href="#">Новсти и акции /</a></li>
+            <li> <a href="#">Главная </a></li>
+            <li> <a href="#">Новсти и акции </a></li>
           </ul>
         </nav>
         <section class="title-news_shares_one">
@@ -54,11 +54,17 @@
               <li> <a href="#">О квартале</a></li>
               <li> <a href="#">Цены и условия</a></li>
               <li> <a href="#">Фотогалерея</a></li>
+              <li> <a href="#">О квартале</a></li>
+              <li> <a href="#">Цены и условия</a></li>
+              <li> <a href="#">Фотогалерея</a></li>
+              <li> <a href="#">О квартале</a></li>
+              <li> <a href="#">Цены и условия</a></li>
+              <li> <a href="#">Фотогалерея</a></li>
             </ul>
           </div>
           <div>
             <p class="h3 js-drop">Сосновый квартал</p>
-            <ul class="links_quarter links_quarter-drop js-drop-content">
+            <ul class="links_quarter js-drop-content">
               <li> <a href="#">О квартале</a></li>
               <li> <a href="#">Цены и условия</a></li>
               <li> <a href="#">Фотогалерея</a></li>
