--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -416,7 +416,7 @@
 	position: relative;
 	left: -4px;
 	top: 16px;
-	width: 42%;
+	width: 46%;
 	max-width: 130px;
 }
 .footer__menu {
@@ -457,7 +457,7 @@
 }
 .footer__footer {
 	background-color: #252525;
-	min-height: 710px;
+	min-height: 100%;
 	h3 {
 		font-family: pf_regular;
 		font-size: 3rem;
@@ -488,6 +488,12 @@
 		a {
 			color: $grey_dark;
 			text-decoration:none;
+		}
+		&:after {
+			content: '/';
+			margin-left: 5px;
+    		margin-right: 10px;
+    		color: $grey_dark;
 		}
 	}
 }
@@ -736,20 +742,39 @@
 	position: fixed;
 	z-index: 110;
 	width: 100%;
-	min-height: 100vh;
+	height: 100vh;
 	background-color: rgba(182, 197, 39, 0.7);
 	top: 0;
 	left: 0;
 	overflow: hidden;
 	display: none;
+	text-align: center;
+	.wrapp-modal-advantage-content {
+		position: absolute;
+	    width: 100%;
+	    height: 100%;
+	    font-size: 0;
+	    overflow: auto;
+	    padding: 50px;
+	    &:before {
+	    	content: '';
+		    height: 100%;
+			width: 0;
+			display: inline-block;
+			vertical-align: middle;
+	    }
+	}
 	.modal-advantage {
 		max-width: 400px;
 		min-width: 320px; 
-		margin: 40% auto;
+		// margin: 40% auto;
 		background-color: #fff;
 		padding: 30px;
 		text-align: center;
 		overflow: auto;
+		display: inline-block;
+	    vertical-align: middle;
+	    position: relative;
 		.title  {
 			font-family: $font_m;
 		}
