--- a/bitrix/templates/main/filters-resalt.html
+++ b/bitrix/templates/main/filters-resalt.html
@@ -73,44 +73,46 @@
           </div>
         </div>
       </div>
-      <footer class="footer footer__footer">
-        <div class="wrapp-menu_footer">
-          <div>
-            <p class="h3 js-drop">Кедровый квартал</p>
-            <ul class="links_quarter js-drop-content">
-              <li> <a href="#">О квартале</a></li>
-              <li> <a href="#">Цены и условия</a></li>
-              <li> <a href="#">Фотогалерея</a></li>
-              <li> <a href="#">О квартале</a></li>
-              <li> <a href="#">Цены и условия</a></li>
-              <li> <a href="#">Фотогалерея</a></li>
-              <li> <a href="#">О квартале</a></li>
-              <li> <a href="#">Цены и условия</a></li>
-              <li> <a href="#">Фотогалерея</a></li>
-            </ul>
+      <footer>
+        <div class="footer footer__footer">
+          <div class="wrapp-menu_footer">
+            <div>
+              <p class="h3 js-drop">Кедровый квартал</p>
+              <ul class="links_quarter js-drop-content">
+                <li> <a href="#">О квартале</a></li>
+                <li> <a href="#">Цены и условия</a></li>
+                <li> <a href="#">Фотогалерея</a></li>
+                <li> <a href="#">О квартале</a></li>
+                <li> <a href="#">Цены и условия</a></li>
+                <li> <a href="#">Фотогалерея</a></li>
+                <li> <a href="#">О квартале</a></li>
+                <li> <a href="#">Цены и условия</a></li>
+                <li> <a href="#">Фотогалерея</a></li>
+              </ul>
+            </div>
+            <div>
+              <p class="h3 js-drop">Сосновый квартал</p>
+              <ul class="links_quarter js-drop-content">
+                <li> <a href="#">О квартале</a></li>
+                <li> <a href="#">Цены и условия</a></li>
+                <li> <a href="#">Фотогалерея</a></li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <p class="h3 js-drop">Сосновый квартал</p>
-            <ul class="links_quarter js-drop-content">
-              <li> <a href="#">О квартале</a></li>
-              <li> <a href="#">Цены и условия</a></li>
-              <li> <a href="#">Фотогалерея</a></li>
-            </ul>
-          </div>
+          <ul class="links_all links_quarter">
+            <li> <a href="#">Программа лояльности</a></li>
+            <li> <a href="#">Новости и акции</a></li>
+            <li> <a href="#">Отдел продаж </a></li>
+          </ul>
+                <object><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a></object>
+          <ul class="social_links">
+            <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
+            <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
+            <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
+          </ul>
+          <p class="footer_info">&copy; 2016, ООО "Астродевелопмент", УНП 691759953 </p>
+          <p class="footer_info">Made in <span> <a class="links" href="#">Flex Media</a></span></p>
         </div>
-        <ul class="links_all links_quarter">
-          <li> <a href="#">Программа лояльности</a></li>
-          <li> <a href="#">Новости и акции</a></li>
-          <li> <a href="#">Отдел продаж </a></li>
-        </ul>
-              <object><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a></object>
-        <ul class="social_links">
-          <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
-          <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
-          <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
-        </ul>
-        <p class="footer_info">&copy; 2016, ООО "Астродевелопмент", УНП 691759953 </p>
-        <p class="footer_info">Made in <span> <a class="links" href="#">Flex Media</a></span></p>
       </footer>
       <div class="menu_mobile js_menu_mobile_open">
         <div class="footer footer__menu">
