--- a/src/pug/foto-gallery.pug
+++ b/src/pug/foto-gallery.pug
@@ -28,8 +28,8 @@ block content
 
 				//- Остальная галерея должна иметь класс .foto_none
 				-for (var i = 0; i < 5; i++){
-					a.foto_none(href="img/slide2.jpg")
-						img(src="img/slide2.jpg" alt="")
+					a.foto_none(href="img/test.jpg")
+						img(src="img/test.jpg" alt="")
 				-}
 				
 		
