--- a/bitrix/templates/main/filters.html
+++ b/bitrix/templates/main/filters.html
@@ -18,9 +18,9 @@
         </div>
       </header>
       <p class="h3 header__text-iphone header__text-iphone-border"> <a href="tel:+1234567890">+375 29 000 00 00</a></p>
-      <seciton class="title-filters">
+      <seciton class="title-filters" id="js-filter">
         <div class="wrapp_filters">
-          <h3 class="filters-h3">Подборка квартиры <span> по параметрам </span> <svg width="133" height="127" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 127"><path id="svg_5" d="m128.84204,15.68759l-42.4671,0c-2.05127,-8.98129 -10.09009,-15.68954 -19.68121,-15.68954c-9.59116,0 -17.62997,6.70825 -19.68127,15.68954l-42.4671,0c-2.49481,0 -4.54608,2.0513 -4.54608,4.54611s2.05127,4.54608 4.54608,4.54608l42.4671,0c2.0513,8.98129 10.09012,15.68951 19.68127,15.68951c9.59113,0 17.62994,-6.70822 19.68121,-15.68951l42.4671,0c2.49481,0 4.54608,-2.0513 4.54608,-4.54608s-2.05127,-4.54611 -4.54608,-4.54611zm-62.0929,15.68954c-6.15387,0 -11.14346,-4.98959 -11.14346,-11.14343c0,-6.15387 4.98959,-11.14349 11.14346,-11.14349c5.98755,0 10.81079,4.7124 11.08801,10.58905c0,0.16635 -0.05542,0.38812 -0.05542,0.55444c0,0.16632 0.05542,0.38806 0.05542,0.55438c-0.33264,5.87665 -5.15594,10.58905 -11.08801,10.58905z"/><path id="svg_6" d="m128.84204,101.6752l-9.48022,0c-2.05127,-8.98129 -10.09009,-15.68954 -19.68127,-15.68954s-17.62994,6.70825 -19.68121,15.68954l-75.39856,0c-2.49478,0 -4.54608,2.05127 -4.54608,4.54608s2.0513,4.54608 4.54608,4.54608l75.45398,0c2.05133,8.98129 10.09015,15.68954 19.68121,15.68954c9.59119,0 17.63,-6.70825 19.68127,-15.68954l9.48022,0c2.49481,0 4.54614,-2.05127 4.54614,-4.54608c-0.05548,-2.55026 -2.10675,-4.54608 -4.60156,-4.54608zm-29.10608,15.68954c-6.15381,0 -11.14343,-4.98962 -11.14343,-11.14349c0,-6.15384 4.98962,-11.14343 11.14343,-11.14343s11.14349,4.98959 11.14349,11.14343c0,6.09842 -4.98962,11.14349 -11.14349,11.14349z"/><path id="svg_7" d="m128.84204,58.65369l-75.45398,0c-2.05127,-8.98132 -10.09009,-15.68958 -19.68121,-15.68958s-17.62994,6.70825 -19.68124,15.68958l-9.48026,0c-2.49481,0 -4.54608,2.05127 -4.54608,4.54608s2.05127,4.54608 4.54608,4.54608l9.48026,0c2.0513,8.98129 10.09012,15.68954 19.68124,15.68954s17.62994,-6.70825 19.68121,-15.68954l75.45398,0c2.49481,0 4.54608,-2.05127 4.54608,-4.54608s-2.05127,-4.54608 -4.54608,-4.54608zm-95.13519,15.68954c-6.15387,0 -11.14349,-4.98962 -11.14349,-11.14346c0,-6.15387 4.98962,-11.14346 11.14349,-11.14346s11.14346,4.98959 11.14346,11.14346c0,6.15384 -4.98962,11.14346 -11.14346,11.14346z"/></svg></h3>
+          <h3 class="filters-h3" id="js-filter-result-open">Подбор квартиры <span> по параметрам </span> <svg width="133" height="127" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 127"><path id="svg_5" d="m128.84204,15.68759l-42.4671,0c-2.05127,-8.98129 -10.09009,-15.68954 -19.68121,-15.68954c-9.59116,0 -17.62997,6.70825 -19.68127,15.68954l-42.4671,0c-2.49481,0 -4.54608,2.0513 -4.54608,4.54611s2.05127,4.54608 4.54608,4.54608l42.4671,0c2.0513,8.98129 10.09012,15.68951 19.68127,15.68951c9.59113,0 17.62994,-6.70822 19.68121,-15.68951l42.4671,0c2.49481,0 4.54608,-2.0513 4.54608,-4.54608s-2.05127,-4.54611 -4.54608,-4.54611zm-62.0929,15.68954c-6.15387,0 -11.14346,-4.98959 -11.14346,-11.14343c0,-6.15387 4.98959,-11.14349 11.14346,-11.14349c5.98755,0 10.81079,4.7124 11.08801,10.58905c0,0.16635 -0.05542,0.38812 -0.05542,0.55444c0,0.16632 0.05542,0.38806 0.05542,0.55438c-0.33264,5.87665 -5.15594,10.58905 -11.08801,10.58905z"/><path id="svg_6" d="m128.84204,101.6752l-9.48022,0c-2.05127,-8.98129 -10.09009,-15.68954 -19.68127,-15.68954s-17.62994,6.70825 -19.68121,15.68954l-75.39856,0c-2.49478,0 -4.54608,2.05127 -4.54608,4.54608s2.0513,4.54608 4.54608,4.54608l75.45398,0c2.05133,8.98129 10.09015,15.68954 19.68121,15.68954c9.59119,0 17.63,-6.70825 19.68127,-15.68954l9.48022,0c2.49481,0 4.54614,-2.05127 4.54614,-4.54608c-0.05548,-2.55026 -2.10675,-4.54608 -4.60156,-4.54608zm-29.10608,15.68954c-6.15381,0 -11.14343,-4.98962 -11.14343,-11.14349c0,-6.15384 4.98962,-11.14343 11.14343,-11.14343s11.14349,4.98959 11.14349,11.14343c0,6.09842 -4.98962,11.14349 -11.14349,11.14349z"/><path id="svg_7" d="m128.84204,58.65369l-75.45398,0c-2.05127,-8.98132 -10.09009,-15.68958 -19.68121,-15.68958s-17.62994,6.70825 -19.68124,15.68958l-9.48026,0c-2.49481,0 -4.54608,2.05127 -4.54608,4.54608s2.05127,4.54608 4.54608,4.54608l9.48026,0c2.0513,8.98129 10.09012,15.68954 19.68124,15.68954s17.62994,-6.70825 19.68121,-15.68954l75.45398,0c2.49481,0 4.54608,-2.05127 4.54608,-4.54608s-2.05127,-4.54608 -4.54608,-4.54608zm-95.13519,15.68954c-6.15387,0 -11.14349,-4.98962 -11.14349,-11.14346c0,-6.15387 4.98962,-11.14346 11.14349,-11.14346s11.14346,4.98959 11.14346,11.14346c0,6.15384 -4.98962,11.14346 -11.14346,11.14346z"/></svg></h3>
           <div class="tabs">
                   <button class="btn btn-white btn-tab_left js_tab" data-tab="tab1" data-add="btn-white" data-remove="btn-white_white-border">Быстрый</button>
                   <button class="btn btn-white_white-border btn-tab_right js_tab" data-tab="tab2" data-add="btn-white" data-remove="btn-white_white-border">Развернутый</button>
@@ -200,6 +200,63 @@
           </div>
         </div>
       </seciton>
+      <section id="js-filter-result">
+        <div class="wrapp-filter-resalt-page">
+          <div class="wrapp_resalt __margin-20">
+            <div class="header-resalt">
+              <div class="title-h3-wrapp">
+                <h3 class="title-h3" id="js-filter-open"><a href="#">Параметры <span>квартиры </span> <svg width="133" height="127" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 127"><path id="svg_5" d="m128.84204,15.68759l-42.4671,0c-2.05127,-8.98129 -10.09009,-15.68954 -19.68121,-15.68954c-9.59116,0 -17.62997,6.70825 -19.68127,15.68954l-42.4671,0c-2.49481,0 -4.54608,2.0513 -4.54608,4.54611s2.05127,4.54608 4.54608,4.54608l42.4671,0c2.0513,8.98129 10.09012,15.68951 19.68127,15.68951c9.59113,0 17.62994,-6.70822 19.68121,-15.68951l42.4671,0c2.49481,0 4.54608,-2.0513 4.54608,-4.54608s-2.05127,-4.54611 -4.54608,-4.54611zm-62.0929,15.68954c-6.15387,0 -11.14346,-4.98959 -11.14346,-11.14343c0,-6.15387 4.98959,-11.14349 11.14346,-11.14349c5.98755,0 10.81079,4.7124 11.08801,10.58905c0,0.16635 -0.05542,0.38812 -0.05542,0.55444c0,0.16632 0.05542,0.38806 0.05542,0.55438c-0.33264,5.87665 -5.15594,10.58905 -11.08801,10.58905z"/><path id="svg_6" d="m128.84204,101.6752l-9.48022,0c-2.05127,-8.98129 -10.09009,-15.68954 -19.68127,-15.68954s-17.62994,6.70825 -19.68121,15.68954l-75.39856,0c-2.49478,0 -4.54608,2.05127 -4.54608,4.54608s2.0513,4.54608 4.54608,4.54608l75.45398,0c2.05133,8.98129 10.09015,15.68954 19.68121,15.68954c9.59119,0 17.63,-6.70825 19.68127,-15.68954l9.48022,0c2.49481,0 4.54614,-2.05127 4.54614,-4.54608c-0.05548,-2.55026 -2.10675,-4.54608 -4.60156,-4.54608zm-29.10608,15.68954c-6.15381,0 -11.14343,-4.98962 -11.14343,-11.14349c0,-6.15384 4.98962,-11.14343 11.14343,-11.14343s11.14349,4.98959 11.14349,11.14343c0,6.09842 -4.98962,11.14349 -11.14349,11.14349z"/><path id="svg_7" d="m128.84204,58.65369l-75.45398,0c-2.05127,-8.98132 -10.09009,-15.68958 -19.68121,-15.68958s-17.62994,6.70825 -19.68124,15.68958l-9.48026,0c-2.49481,0 -4.54608,2.05127 -4.54608,4.54608s2.05127,4.54608 4.54608,4.54608l9.48026,0c2.0513,8.98129 10.09012,15.68954 19.68124,15.68954s17.62994,-6.70825 19.68121,-15.68954l75.45398,0c2.49481,0 4.54608,-2.05127 4.54608,-4.54608s-2.05127,-4.54608 -4.54608,-4.54608zm-95.13519,15.68954c-6.15387,0 -11.14349,-4.98962 -11.14349,-11.14346c0,-6.15387 4.98962,-11.14346 11.14349,-11.14346s11.14346,4.98959 11.14346,11.14346c0,6.15384 -4.98962,11.14346 -11.14346,11.14346z"/></svg></a></h3>
+              </div>
+              <div class="group_chechbox">
+                <input type="checkbox" id="group">
+                <label class="checkbox-custom__check" for="group"> 
+                  <p>Групировать по планировкам</p>
+                </label>
+              </div>
+            </div>
+            <div class="body-resalt">
+              <ul class="list-items-resalts">
+                <li class="item-resalts"><a href="#">
+                    <div class="wrapp-img"><img src="img/resault.jpg" alt=""></div>
+                    <div class="info-item-resalt">
+                      <div>
+                        <h4>1-комната, 44,92 м <sup>2</sup></h4>
+                        <p>Кедровый квартал, 4 (19-этажный) дом, 1 под., 9 этаж, Лоджия</p>
+                      </div>
+                      <h4 class="price">80 600 USD</h4>
+                    </div></a></li>
+                <li class="item-resalts"><a href="#">
+                    <div class="wrapp-img"><img src="img/resault.jpg" alt=""></div>
+                    <div class="info-item-resalt">
+                      <div>
+                        <h4>1-комната, 44,92 м <sup>2</sup></h4>
+                        <p>Кедровый квартал, 4 (19-этажный) дом, 1 под., 9 этаж, Лоджия</p>
+                      </div>
+                      <h4 class="price">80 600 USD</h4>
+                    </div></a></li>
+                <li class="item-resalts"><a href="#">
+                    <div class="wrapp-img"><img src="img/resault.jpg" alt=""></div>
+                    <div class="info-item-resalt">
+                      <div>
+                        <h4>1-комната, 44,92 м <sup>2</sup></h4>
+                        <p>Кедровый квартал, 4 (19-этажный) дом, 1 под., 9 этаж, Лоджия</p>
+                      </div>
+                      <h4 class="price">80 600 USD</h4>
+                    </div></a></li>
+                <li class="item-resalts"><a href="#">
+                    <div class="wrapp-img"><img src="img/resault.jpg" alt=""></div>
+                    <div class="info-item-resalt">
+                      <div>
+                        <h4>1-комната, 44,92 м <sup>2</sup></h4>
+                        <p>Кедровый квартал, 4 (19-этажный) дом, 1 под., 9 этаж, Лоджия</p>
+                      </div>
+                      <h4 class="price">80 600 USD</h4>
+                    </div></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
       <footer>
         <div class="footer footer__footer">
           <div class="wrapp-menu_footer">
