--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -49,8 +49,8 @@
         </section>
         <section class="title-tabs">
           <div class="tabs __margin-20">
-                  <button class="btn btn-black btn-tab_left js_tab" data-tab="tab1" data-add="btn-black" data-remove="btn-black_noactive">Кедровый</button>
-                  <button class="btn btn-black_noactive btn-tab_right js_tab" data-tab="tab2" data-add="btn-black" data-remove="btn-black_noactive">Сосновый</button>
+                  <button class="btn btn-black js_tab" data-tab="tab1" data-add="btn-black" data-remove="btn-black_noactive">Кедровый</button>
+                  <button class="btn btn-black_noactive js_tab" data-tab="tab2" data-add="btn-black" data-remove="btn-black_noactive">Сосновый</button>
           </div>
           <div class="tabs-content js-tabs-content">
             <div class="tab-kedr js_tab_item" data-tab-container="tab1">
