--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -30,8 +30,8 @@ block content
 
 		section.title-tabs
 			div.tabs.__margin-20
-				+btn('btn-black btn-tab_left js_tab', 'Кедровый', 'tab1', 'btn-black', 'btn-black_noactive')
-				+btn('btn-black_noactive btn-tab_right js_tab', 'Сосновый' , 'tab2', 'btn-black', 'btn-black_noactive')
+				+btn('btn-black js_tab', 'Кедровый', 'tab1', 'btn-black', 'btn-black_noactive')
+				+btn('btn-black_noactive js_tab', 'Сосновый' , 'tab2', 'btn-black', 'btn-black_noactive')
 
 			mixin house
 				a.house(href='#')
