--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -66,3 +66,12 @@ a {text-decoration: none;}
 .h3 {
 	font-size: 3.1rem;
 }
+
+img {
+	max-width: 100%;
+	height: auto !important;
+}
+
+sup {
+    vertical-align: super !important;
+}
