'fix_modal_adv'

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -761,7 +761,7 @@
 	    height: 100%;
 	    font-size: 0;
 	    overflow: auto;
-	    padding: 50px;
+	    // padding: 50px;
 	    &:before {
 	    	content: '';
 		    height: 100%;
