--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -237,7 +237,7 @@
             <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
             <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
           </ul>
-          <p class="footer_info">&copy; 2016, ООО "Астродевелопмент", УНП 691759953 </p>
+          <p class="footer_info">&copy; 2016-2017,<br> ООО "Астодевелопмент",<br> УНП 691759953 </p>
           <p class="footer_info">Made in <span> <a class="links" href="#">Flex Media</a></span></p>
         </div>
       </footer>
@@ -307,7 +307,7 @@
                 </div>
                 <div class="field">
                   <h4>Сообщение</h4>
-                  <textarea class="btn-white_white-border" rows="10" data-validation="length" data-validation-length="max1000"></textarea>
+                  <textarea class="btn-white_white-border" rows="5" data-validation="length" data-validation-length="max1000"></textarea>
                 </div>
                 <div class="field">
                   <div class="wrapp-btn">
