--- a/bitrix/templates/main/about-quarter.html
+++ b/bitrix/templates/main/about-quarter.html
@@ -31,7 +31,13 @@
           <div class="wrapp_about_quarter">
             <h3 class="about_quarter-h3">О кедровом квартале</h3>
             <p class="about_quarter-description">Кедровый — первый из 11 кварталов Новой Боровой. До конца 2018 года в квартале завершится строительство всех квартир и детского садика на 150 мест. Жители первых трех домов уже получили ключи от своих квартир и смогли оценить комфорт и уют нового района.</p>
-                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a>
+                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#">
+                      <!-- img(src=allSlides[i].img)-->
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide1.jpg&quot;)"> </div></a><a class="slide__item4" href="#">
+                      <!-- img(src=allSlides[i].img)-->
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide1.jpg&quot;)"> </div></a><a class="slide__item4" href="#">
+                      <!-- img(src=allSlides[i].img)-->
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide1.jpg&quot;)"> </div></a>
                   </div>
                   <div class="slider-init-2_2 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#">
                       <p>1Красивые, счастливые и интересные – это ваши новые соседи!</p></a><a class="slide__item4" href="#">
@@ -66,7 +72,13 @@
           <div class="wrapp_about_quarter">
             <h4 class="about_quarter-h4">Развитая инфраструктура</h4>
             <p class="about_quarter-description">Центральная площадь с амфитеатром, «сухим »фонтаном и спортивными зонами и летним кафе.</p>
-                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a>
+                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#">
+                      <!-- img(src=allSlides[i].img)-->
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide1.jpg&quot;)"> </div></a><a class="slide__item4" href="#">
+                      <!-- img(src=allSlides[i].img)-->
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide1.jpg&quot;)"> </div></a><a class="slide__item4" href="#">
+                      <!-- img(src=allSlides[i].img)-->
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide1.jpg&quot;)"> </div></a>
                   </div>
                   <div class="slider-init-2_2 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#">
                       <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p></a><a class="slide__item4" href="#">
@@ -88,17 +100,20 @@
           <div class="wrapp-house">
                       <div class="house">
                         <h4 class="house-title">Дом 6</h4>
-                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                        <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                               <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object>
                       </div>
                       <div class="house">
                         <h4 class="house-title">Дом 6</h4>
-                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                        <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                               <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object>
                       </div>
                       <div class="house">
                         <h4 class="house-title">Дом 6</h4>
-                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                        <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                               <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object>
                       </div>
           </div>
