--- a/bitrix/templates/main/foto-gallery.html
+++ b/bitrix/templates/main/foto-gallery.html
@@ -31,27 +31,32 @@
           <h3 class="foto_galerias-h3 __margin-20">Фотогалерея</h3>
           <div class="wrapp_foto_galerias">
             <div class="foto_galerias-item">
-                      <div class="lightgallery-custom" id="lightgallery1"><a href="img/slide2.jpg"><img src="img/slide2.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
+                      <div class="lightgallery-custom" id="lightgallery1"><a href="img/slide2.jpg">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
                       </div>
               <h4 class="foto_galerias-item-title">Ноябрь 2016 /</h4><span class="foto_galerias-item-descript">10 фото</span>
             </div>
             <div class="foto_galerias-item">
-                      <div class="lightgallery-custom" id="lightgallery2"><a href="img/slide2.jpg"><img src="img/slide2.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
+                      <div class="lightgallery-custom" id="lightgallery2"><a href="img/slide2.jpg">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
                       </div>
               <h4 class="foto_galerias-item-title">Ноябрь 2016 /</h4><span class="foto_galerias-item-descript">10 фото</span>
             </div>
             <div class="foto_galerias-item">
-                      <div class="lightgallery-custom" id="lightgallery3"><a href="img/slide2.jpg"><img src="img/slide2.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
+                      <div class="lightgallery-custom" id="lightgallery3"><a href="img/slide2.jpg">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
                       </div>
               <h4 class="foto_galerias-item-title">Ноябрь 2016 /</h4><span class="foto_galerias-item-descript">10 фото</span>
             </div>
             <div class="foto_galerias-item">
-                      <div class="lightgallery-custom" id="lightgallery4"><a href="img/slide2.jpg"><img src="img/slide2.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
+                      <div class="lightgallery-custom" id="lightgallery4"><a href="img/slide2.jpg">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
                       </div>
               <h4 class="foto_galerias-item-title">Ноябрь 2016 /</h4><span class="foto_galerias-item-descript">10 фото</span>
             </div>
             <div class="foto_galerias-item">
-                      <div class="lightgallery-custom" id="lightgallery5"><a href="img/slide2.jpg"><img src="img/slide2.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
+                      <div class="lightgallery-custom" id="lightgallery5"><a href="img/slide2.jpg">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a><a class="foto_none" href="img/test.jpg"><img src="img/test.jpg" alt=""></a>
                       </div>
               <h4 class="foto_galerias-item-title">Ноябрь 2016 /</h4><span class="foto_galerias-item-descript">10 фото</span>
             </div>
