--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -20,9 +20,12 @@
       <p class="h3 header__text-iphone header__text-iphone-border"> <a href="tel:+1234567890">+375 29 000 00 00</a></p>
       <div class="wrapp-index-page">
         <section class="title-slider">
-                <div class="slider-init slider-custom1" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item" href="#"><img src="img/slide1.jpg">
-                    <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2></a><a class="slide__item" href="#"><img src="img/slide1.jpg">
-                    <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2></a><a class="slide__item" href="#"><img src="img/slide1.jpg">
+                <div class="slider-init slider-custom1" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item" href="#">
+                    <!-- div.wrapp-img-card(style = 'background-image: url("'+ allSlides[i].img + '");') --><img src="img/slide1.jpg">
+                    <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2></a><a class="slide__item" href="#">
+                    <!-- div.wrapp-img-card(style = 'background-image: url("'+ allSlides[i].img + '");') --><img src="img/slide1.jpg">
+                    <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2></a><a class="slide__item" href="#">
+                    <!-- div.wrapp-img-card(style = 'background-image: url("'+ allSlides[i].img + '");') --><img src="img/slide1.jpg">
                     <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2></a>
                 </div>
         </section>
@@ -58,25 +61,31 @@
               <p>Кедровый &mdash; первый из 11 кварталов Новой Боровой. На сегодняшний день построено 3 дома.	</p>
               <div class="wrapp-house wrapp-house__ipad"><a class="house" href="#">
                             <h4 class="house-title">Дом 6</h4>
-                            <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                            <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                            <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                   <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="house" href="#">
                             <h4 class="house-title">Дом 6</h4>
-                            <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                            <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                            <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                   <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="house" href="#">
                             <h4 class="house-title">Дом 6</h4>
-                            <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                            <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                            <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                   <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a>
               </div>
               <div class="wrapp-house wrapp-house__iphone">
                       <div class="slider-init slider-custom2 slider-custom3 slick-dots-none" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item2" href="#">
                           <h4>Дом 6</h4>
-                          <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                          <p>(9.6 по генплану), 19 этажей</p>
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                 <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="slide__item2" href="#">
                           <h4>Дом 6</h4>
-                          <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                          <p>(9.6 по генплану), 19 этажей</p>
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                 <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="slide__item2" href="#">
                           <h4>Дом 6</h4>
-                          <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                          <p>(9.6 по генплану), 19 этажей</p>
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                 <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a>
                       </div>
               </div>
@@ -86,25 +95,31 @@
               <p>Кедровый &mdash; первый из 11 кварталов Новой Боровой. На сегодняшний день построено 3 дома.	</p>
               <div class="wrapp-house wrapp-house__ipad"><a class="house" href="#">
                             <h4 class="house-title">Дом 6</h4>
-                            <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                            <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                            <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                   <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="house" href="#">
                             <h4 class="house-title">Дом 6</h4>
-                            <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                            <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                            <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                   <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="house" href="#">
                             <h4 class="house-title">Дом 6</h4>
-                            <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                            <p class="house-descript">(9.6 по генплану), 19 этажей</p>
+                            <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                   <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a>
               </div>
               <div class="wrapp-house wrapp-house__iphone">
                       <div class="slider-init slider-custom2 slider-custom3 slick-dots-none" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item2" href="#">
                           <h4>Дом 6</h4>
-                          <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                          <p>(9.6 по генплану), 19 этажей</p>
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                 <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="slide__item2" href="#">
                           <h4>Дом 6</h4>
-                          <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                          <p>(9.6 по генплану), 19 этажей</p>
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                 <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a><a class="slide__item2" href="#">
                           <h4>Дом 6</h4>
-                          <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                          <p>(9.6 по генплану), 19 этажей</p>
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                                 <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object></a>
                       </div>
               </div>
@@ -114,11 +129,17 @@
         <section class="title-news">
           <div class="wrapp-news">
             <h3 class="new-title __margin-20">Новости </h3>
-                  <div class="slider-init slider-custom2" data-slick="{&quot;slidesToShow&quot;:2, &quot;slidesToScroll&quot;:2, &quot;arrows&quot;:&quot;true&quot;}"><a class="slide__item2" href="#"><img src="img/slide2.jpg">
+                  <div class="slider-init slider-custom2" data-slick="{&quot;slidesToShow&quot;:2, &quot;slidesToScroll&quot;:2, &quot;arrows&quot;:&quot;true&quot;}"><a class="slide__item2" href="#">
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
+                      <!-- img(src=allSlides[i].img)-->
                       <p>2 декабря 2016</p>
-                      <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4></a><a class="slide__item2" href="#"><img src="img/slide2.jpg">
+                      <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4></a><a class="slide__item2" href="#">
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
+                      <!-- img(src=allSlides[i].img)-->
                       <p>2 декабря 2016</p>
-                      <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4></a><a class="slide__item2" href="#"><img src="img/slide2.jpg">
+                      <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4></a><a class="slide__item2" href="#">
+                      <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
+                      <!-- img(src=allSlides[i].img)-->
                       <p>2 декабря 2016</p>
                       <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4></a>
                   </div>
