--- a/bitrix/templates/main/news.html
+++ b/bitrix/templates/main/news.html
@@ -27,16 +27,20 @@
         <section class="title-news_shares">
           <h3 class="news_title __margin-20">Новости и акции</h3>
           <div class="wrapp-house __margin-20 wrapp-house_price wrapp-news">
-                      <div class="house news-fix"><a href="#"><img src="img/slide2.jpg" alt="alt">
+                      <div class="house news-fix"><a href="#">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                           <p class="house-descript">2 декабря 2016</p>
                           <h4 class="house-title">От 17,5% на 20 лет: уникальный кредит на жилье в НБ</h4></a></div>
-                      <div class="house news-fix"><a href="#"><img src="img/slide2.jpg" alt="alt">
+                      <div class="house news-fix"><a href="#">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                           <p class="house-descript">2 декабря 2016</p>
                           <h4 class="house-title">От 17,5% на 20 лет: уникальный кредит на жилье в НБ</h4></a></div>
-                      <div class="house news-fix"><a href="#"><img src="img/slide2.jpg" alt="alt">
+                      <div class="house news-fix"><a href="#">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                           <p class="house-descript">2 декабря 2016</p>
                           <h4 class="house-title">От 17,5% на 20 лет: уникальный кредит на жилье в НБ</h4></a></div>
-                      <div class="house news-fix"><a href="#"><img src="img/slide2.jpg" alt="alt">
+                      <div class="house news-fix"><a href="#">
+                          <div class="wrapp-img-card" style="background-image: url(&quot;img/slide2.jpg&quot;)"> </div>
                           <p class="house-descript">2 декабря 2016</p>
                           <h4 class="house-title">От 17,5% на 20 лет: уникальный кредит на жилье в НБ</h4></a></div>
           </div>
