--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -20,7 +20,7 @@ block content
 			mixin news
 				div.house.news-fix
 					a(href='#')
-						img(src="img/slide2.jpg" alt="alt")
+						div.wrapp-img-card(style = 'background-image: url("img/slide2.jpg");') 
 						p.house-descript 2 декабря 2016
 						h4.house-title От 17,5% на 20 лет: уникальный кредит на жилье в НБ
 			div.wrapp-house.__margin-20.wrapp-house_price.wrapp-news
