--- a/src/pug/about-quarter.pug
+++ b/src/pug/about-quarter.pug
@@ -59,7 +59,7 @@ block content
 				div.house
 					h4.house-title Дом 6
 					p.house-descript (9.6 по генплану), 19 этажей
-					img(src="img/slide2.jpg" alt="alt")
+					div.wrapp-img-card(style = 'background-image: url("img/slide2.jpg");') 
 					+a('btn-green btn-uppercase btn-center', 'подобрать по параметрам','#')
 			div.wrapp-house
 				+house
