--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -245,6 +245,15 @@
 		padding: 20px 10px;
 		width: 100%;
 	}
+
+}
+.wrapp-img-card {
+	width: 100%;
+	height: 210px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	margin: 15px 0;
 }
 
 .house:nth-child(odd) {
