'add_404_and_mini_fix'

--- a/src/sass/_filters.scss
+++ b/src/sass/_filters.scss
@@ -64,6 +64,9 @@
 				color: #757e1f;
     			text-align: center;
    				font-size: 2rem;
+   				max-width: 200px;
+			    margin: 0 auto;
+			    display: block;
 			}
 		}
 	}
