--- a/src/sass/lib/_variables.sass
+++ b/src/sass/lib/_variables.sass
@@ -11,7 +11,7 @@ $grey: #d1d1d1;
 $grey_dark: #858585;
 $font_size: 10px;
 
-$font_m: 'pf_medium';
-$font_r: 'pf_regular';
-$font_b: 'pf_bold';
+$font_m: 'pf_medium', sans-serif;
+$font_r: 'pf_regular', sans-serif;
+$font_b: 'pf_bold', sans-serif;
 
