--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -75,6 +75,7 @@
 	.wrapp-advantages .advantages {
 		flex-basis: 50%;
 		padding: 30px 0;
+		min-width: 150px;
 	}
 	.border-right {
 		border-right: 1px solid $grey;
@@ -145,9 +146,21 @@
 	.wrapp-news {
 		padding-bottom: 8px;
 	}
+	.wrapp-news:after {
+		content:'';
+		position: absolute;
+		width: 90%;
+		background-color: #d1d1d1;
+		height: 1px;
+		left:0;
+		right:0;
+		margin: 0 auto;
+	}
 	.about-work {
 	    margin-top: 0;
 	    padding-top: 40px;
+	    border-bottom: 1px solid #d1d1d1;
+    	padding-bottom: 42px;
 	}
 	.logo_quarter {
 		margin: 0 20px;
